--- a/springboot_security01/src/main/resources/static/login.html
+++ b/springboot_security01/src/main/resources/static/login.html
@@ -24,10 +24,10 @@
         <button type="submit">立即登陆</button>
     </div>
 </form>
-<br>
+<br>email
 <form method="post" action="/sms/login">
     <div>
-        手机号：<input type="text" id="mobile" name="mobile" value="mage">
+        邮箱号：<input type="text" id="mobile" name="mobile" value="mage">
     </div>
     <div>
         验证码：<input type="text" name="smsCode">
@@ -37,8 +37,8 @@
         <button type="submit">立即登陆</button>
     </div>
 </form>
-<br>email
-<form method="post" action="/email/login">
+<br>
+<!--<form method="post" action="/email/login">
     <div>
         邮箱号：<input type="text" id="email" name="email" value="mage">
     </div>
@@ -49,7 +49,7 @@
     <div>
         <button type="submit">立即登陆</button>
     </div>
-</form>
+</form>-->
 
 
 <script>
